# WHASOS

./: .gitignore  2026-02-28-20-55-45.md  2026-02-28-20-56-27.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  WHAOS.sln
boot/grub/: grub.cfg
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BUILD_VS2022.md  CORE_APPS.md  DRIVERS.md  FILESYSTEM.md  HOWTOBUILD.md  INPUT.md  KERNEL_DIAGRAM.md  USERS_AND_SECURITY.md  VIRTUALBOX.md  index.html
etc/: fstab.example
etc/whad/: rc.conf.example
scripts/: build_iso.sh
src/desktop/: Makefile  main.c  whaos_panel.c  whaos_theme.css
src/init/: Makefile  whad.c
src/installer/: whaos_installer.sh
src/kernel/: Makefile  whaos_defconfig.in
whad/: whad.vcxproj
whaos-panel/: whaos-panel.vcxproj
